# Scalable_Capital

./: README.md
Task-1/: pyproject.toml
Task-1/src/sc_spotify_etl/: cli.py  db.py  etl.py  etl_audit.py
Task-2/: Data-Analysis.md  Data-Analysis.sql  Untitled-1.sh
