[project]
name = "scalable-capital"
version = "0.0.1"
description = "Spotify ETL assignment with DuckDB"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "duckdb>=0.9.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project.scripts]
sc-spotify-etl = "sc_spotify_etl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]